--- a/src/Controller_20161221/Views/Home/ListTasks.cshtml
+++ b/src/Controller_20161221/Views/Home/ListTasks.cshtml
@@ -1,4 +1,4 @@
-﻿@model Controller_20161221.Models.ListTasks
+﻿@model Controller_20161221.Models.NOSQL_Interface
 
 @{
     ViewData["Title"] = "ListTasks";
