HomeController : Mongodb Integration is implemented. NoSQL_Interface : MONGDB access and paging of data selected is implemented. jquery.jtable.js  : Date format read from mongodb was not diaplayed in Jtable. Hence jtable java script updated to be able to display date in jtable. Index.cs : DisplayFormat added for date field in jtable definition part. Besides due to fact that json fields downloaded starts with lower case letter field definitions in jtable updated such that they start with lower case letter.

--- a/src/Controller_20161221/Views/Home/Index.cshtml
+++ b/src/Controller_20161221/Views/Home/Index.cshtml
@@ -112,41 +112,42 @@
                     deleteAction: '/Actions/DeleteOrder'
                 },
                 fields: {
-                    'AgencyCode': {
+                    'agencyCode': {
                         key: true,
                         list: false
                     },
-                    'UserId': {
+                    'userId': {
                         key: true,
                         list: false
                     },
-                    'ProcessStep':{
+                    'processStep':{
                         title:'Process Step',
                         width:'10%',
 
                     },
-                    'ProposalNo': {
+                    'proposalNo': {
                         title: 'Pol/Proposal No',
                         width: '15%'
                     },
-                    'CustomerName': {
+                    'customerName': {
                         title: 'Name',
                         width: '15%'
                     },
-                    'CustomerSurname': {
+                    'customerSurname': {
                         title: 'Surname',
                         width: '20%'
                     },
-                    'ProductName': {
+                    'productName': {
                         title: 'Product Name',
                         width: '10%'
                     },
-                    'ProposalDate': {
+                    'proposalDate': {
                         title : 'Proposal Date',
                         width:'10%',
-                        type:'date',
+                        type: 'date',
+                        displayFormat:"dd-mm-yy"
                     },
-                    'ValidDays': {
+                    'validDays': {
                         title: 'Valid Days',
                         width: '10%',
                     }
